Fixed geology image layering alignment

--- a/src/app/[planets]/geology/page.module.sass
+++ b/src/app/[planets]/geology/page.module.sass
@@ -1,7 +1,7 @@
-.image_planet
+.images_wrapper
   position: relative
 
 .image_zoom
   position: absolute
-  left: 90px
-  bottom: 200px
+  top: 55%
+  left: 22.2%
