--- a/src/app/[planets]/layout.module.sass
+++ b/src/app/[planets]/layout.module.sass
@@ -42,10 +42,10 @@
     justify-content: space-between
     align-items: center
     max-width: 100%
-    gap: 25px
+    gap: 40px
 
   .main_content_copy_text
-    width: 50%
+    width: 45%
 
   .main_content_copy_buttons
     flex-grow: 1
